Add auth endpoints in swagger UI
