# app/backend/src/docs/swagger.yaml
@@ -57,7 +57,7 @@ paths:
         required: true
 
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
 
@@ -67,17 +67,29 @@ paths:
                 - password
 
               properties:
-                username:
+                username: 
                   type: string
-                  example: lavkush
-
+                  example: test
+                
                 email:
                   type: string
-                  example: lavkush@gmail.com
-
-                password:
+                  example: test@mail.com
+                
+                password: 
                   type: string
-                  example: password123
+                  example: test1234
+                
+                age:
+                  type: number
+                  example: 18
+                
+                gender: 
+                  type: string
+                  example: "MALE"
+                
+                avatar:
+                  type: file
+                  example: test.jpg
 
       responses:
         "201":
@@ -211,6 +223,120 @@ paths:
 
         "401":
           description: Unauthorized
+  
+  /api/v1/auth/create-admin:
+    post:
+      tags:
+        - Auth
+
+      summary: Create admin user
+
+      requestBody:
+        required: true
+
+        content:
+          application/json:
+            schema:
+              type: object
+
+              properties:
+                email:
+                  type: string
+                  example: test@mail.com
+
+                password:
+                  type: string
+                  example: password123
+
+      responses:
+        "200":
+          description: Login successful
+
+        "400":
+          description: Invalid credentials
+  
+  /api/v1/auth/:
+    get:
+      tags:
+        - Auth
+
+      summary: Get all profiles 
+
+      security:
+        - bearerAuth: []
+
+      responses:
+        "200":
+          description: Profiles fetched successfully
+
+        "401":
+          description: Unauthorized
+        
+        "403":
+          description: Forbidden Access denied
+  
+    patch:
+      tags:
+        - Auth
+
+      summary: update profile
+
+      security:
+        - bearerAuth: []
+      
+      requestBody:
+        required: true
+
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              
+              properties:
+                username: 
+                  type: string
+                  example: test
+                
+                email:
+                  type: string
+                  example: test@mail.com
+                
+                age:
+                  type: number
+                  example: 18
+                
+                gender: 
+                  type: string
+                  example: "MALE"
+                
+                avatar:
+                  type: file
+              
+
+
+      responses:
+        "200":
+          description: Profile updated successfully
+
+        "404":
+          description: User not found
+
+    delete:
+      tags:
+        - Auth
+
+      summary: delete profile
+
+      security:
+        - bearerAuth: []
+
+      responses:
+        "200":
+          description: Profile deleted successfully
+
+        "404":
+          description: User not found
+
 
   # =========================
   # ANIME ROUTES
